<resources>
    <string name="app_name">GymApp</string>
    <string name="login">Login</string>
    <string name="registrazione">Registrati</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="cognome">Cognome</string>
    <string name="telefono">Telefono</string>
    <string name="nome">Nome</string>
    <string name="cap">CAP</string>
    <string name="annulla">Annulla</string>
    <string name="registra">Registra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modifica_membro_team">Modifica membro Team</string>
    <string name="modifica">Modifica</string>
    <string name="registrazione_nuovo_membro_team">Registrazione nuovo membro Team</string>
    <string name="il_tuo_team_vuoto">Il tuo Team è vuoto!</string>
    <string name="conferma">Conferma</string>
    <string name="documenti">Documenti</string>
    <string name="informazioni_di_contatto">Informazioni di contatto</string>
    <string name="ddn">ddn</string>
    <string name="nome_cognome">Nome Cognome</string>
</resources>